[tool.poetry]
name = "training-gym"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "training_gym"}]

[tool.poetry.dependencies]
python = "^3.10"
gymnasium = {extras = ["atari", "all"], version = "^0.29.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
