[tool.poetry]
name = "training-gym"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "training_gym"}]

[tool.poetry.dependencies]
python = "^3.10"
gymnasium = {extras = ["accept-rom-license", "atari", "all"], version = "^0.26"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
